fixed cancel/delete button being too small, and addd whitespace to allow for back button to display

--- a/app/src/main/java/edu/ucsd/cse110/style.css
+++ b/app/src/main/java/edu/ucsd/cse110/style.css
@@ -176,7 +176,7 @@
   -fx-background-radius: 4px;
   -fx-text-fill: white;
   -fx-padding: 2 5 2 5;
-  -fx-min-width: 40;
+  -fx-min-width: 45;
   -fx-font-family: 'Arial';
   -fx-font-weight: bold;
   -fx-font-size: 10;
@@ -205,7 +205,7 @@
   -fx-background-radius: 4px;
   -fx-text-fill: white;
   -fx-padding: 2 5 2 5;
-  -fx-min-width: 40;
+  -fx-min-width: 45;
   -fx-font-family: 'Arial';
   -fx-font-weight: bold;
   -fx-font-size: 10;
